// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caching tableComponent will cache a the sort column 1`] = `
Object {
  "vue-table-component.blank": "{\\"value\\":{\\"filter\\":\\"\\",\\"sort\\":{\\"fieldName\\":\\"songs\\",\\"order\\":\\"desc\\"}},\\"expires\\":\\"2017-01-01T00:05:00.000Z\\"}",
}
`;

exports[`Caching tableComponent will cache the filter 1`] = `
Object {
  "vue-table-component.blank": "{\\"value\\":{\\"filter\\":\\"cache this\\",\\"sort\\":{\\"fieldName\\":\\"\\",\\"order\\":\\"desc\\"}},\\"expires\\":\\"2017-01-01T00:05:00.000Z\\"}",
}
`;
